# 3bd

./: .gitignore  DEPENDECIES.md  README.md
code/: Cargo.toml
code/assets/: config.toml  test.toml
code/assets/icons/: README.md
code/src/: config.rs  data.rs  dwarf.rs  main.rs  objdump.rs  object.rs  style.rs  test.rs  trace.rs  ui.rs  window.rs
code/worker/: a.out  worker  worker.c
doc/: README.md
docs/: doc.md  theory.md
examples/c/: Makefile  main.c  other.c
examples/c++/: Makefile  main.cpp  other.cpp  other.h
examples/rust/: Makefile
examples/rust/src/: display.rs  main.rs
scripts/: README.md
test/c/: main.c  other.c  other.h
test/c++/: main.cpp  other.cpp
test/debug/: a.out  log.txt  main.c
test/elf/: helloworld  helloworld.asm  helloworld.c
test/languages/c/: a.out  log.txt  main.c  opti  other.c
test/languages/c++/: a.out  log.txt  main.cpp  opti  other.cpp  other.h
test/languages/rust/: Cargo.toml  a.out  l  loga.txt
test/languages/rust/src/: display.rs  main.rs
test/proc/: a.out  main.c
